# routes/index.js
@@ -1,7 +1,7 @@
 const routes = require('express').Router()
 
 // routes.use("/artists", require('./artists'))
- routes.use("/books", require("./books"))
+routes.use("/books", require("./books"))
 routes.use("/handyman", require("./handyman"))
 // routes.use("cars", require("./cars"))
 routes.use("/", (req, res) => {
